@@ -13,12 +13,13 @@ OBJ_REORDERTP = reordertp.o util.o
 OBJ_OFFSETS = offsets.o util.o
 OBJ_LASTS = lasts.o
 OBJ_MULTICAT_VALIDATE = multicat_validate.o util.o
+OBJ_MULTILIVE = multilive.o util.o
 
 PREFIX ?= /usr/local
 BIN = $(DESTDIR)/$(PREFIX)/bin
 MAN = $(DESTDIR)/$(PREFIX)/share/man/man1
 
-all: multicat ingests aggregartp reordertp offsets lasts multicat_validate
+all: multicat ingests aggregartp reordertp offsets lasts multicat_validate multilive
 
 $(OBJ_MULTICAT): Makefile util.h
 $(OBJ_INGESTS): Makefile util.h
@@ -27,6 +28,7 @@ $(OBJ_REORDERTP): Makefile util.h
 $(OBJ_OFFSETS): Makefile util.h
 $(OBJ_LASTS): Makefile
 $(OBJ_MULTICAT_VALIDATE): Makefile util.h
+$(OBJ_MULTILIVE): Makefile util.h
 
 multicat: $(OBJ_MULTICAT)
 	$(CC) -o $@ $(OBJ_MULTICAT) $(LDLIBS)
@@ -49,17 +51,20 @@ lasts: $(OBJ_LASTS)
 multicat_validate: $(OBJ_MULTICAT_VALIDATE)
 	$(CC) -o $@ $(OBJ_MULTICAT_VALIDATE) $(LDLIBS)
 
+multilive: $(OBJ_MULTILIVE)
+	$(CC) -o $@ $(OBJ_MULTILIVE) $(LDLIBS)
+
 clean:
-	-rm -f multicat $(OBJ_MULTICAT) ingests $(OBJ_INGESTS) aggregartp $(OBJ_AGGREGARTP) reordertp $(OBJ_REORDERTP) offsets $(OBJ_OFFSETS) lasts $(OBJ_LASTS) multicat_validate $(OBJ_MULTICAT_VALIDATE)
+	-rm -f multicat $(OBJ_MULTICAT) ingests $(OBJ_INGESTS) aggregartp $(OBJ_AGGREGARTP) reordertp $(OBJ_REORDERTP) offsets $(OBJ_OFFSETS) lasts $(OBJ_LASTS) multicat_validate $(OBJ_MULTICAT_VALIDATE) multilive $(OBJ_MULTILIVE)
 
 install: all
 	@install -d $(BIN)
 	@install -d $(MAN)
-	@install multicat ingests aggregartp reordertp offsets lasts multicat_validate $(BIN)
+	@install multicat ingests aggregartp reordertp offsets lasts multicat_validate multilive $(BIN)
 	@install multicat.1 ingests.1 aggregartp.1 reordertp.1 offsets.1 lasts.1 $(MAN)
 
 uninstall:
-	@rm $(BIN)/multicat $(BIN)/ingests $(BIN)/aggregartp $(BIN)/reordertp $(BIN)/offsets $(BIN)/lasts $(BIN)/multicat_validate
+	@rm $(BIN)/multicat $(BIN)/ingests $(BIN)/aggregartp $(BIN)/reordertp $(BIN)/offsets $(BIN)/lasts $(BIN)/multicat_validate $(BIN)/multilive
 	@rm $(MAN)/multicat.1 $(MAN)/ingests.1 $(MAN)/aggregartp.1 $(MAN)/reordertp.1 $(MAN)/offsets.1 $(MAN)/lasts.1
 
 dist:
